- verified that, in fact, there was a problem with initializing/re-initializing data structures in such a way that the virtual function tables were being improperly reset.
To fix this I changed the structure of the code so that the list management code and the update loops have been untangled. This should allow the in-game data to be reset without blanking out the data that is being used to track its allocation and index in the stack

- I have not been able to play test the changes yet, but I need a restore point. :)

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -189,9 +189,6 @@
 				RelativePath=".\egoboo_typedef.cpp">
 			</File>
 			<File
-				RelativePath=".\egoboo_typedef_cpp.inl">
-			</File>
-			<File
 				RelativePath=".\font_bmp.cpp">
 			</File>
 			<File
@@ -536,6 +533,9 @@
 			Filter="">
 			<File
 				RelativePath=".\char.inl">
+			</File>
+			<File
+				RelativePath=".\egoboo_object.inl">
 			</File>
 			<File
 				RelativePath=".\enchant.inl">
@@ -973,6 +973,9 @@
 			Filter="">
 			<File
 				RelativePath=".\egoboo_math.inl">
+			</File>
+			<File
+				RelativePath=".\egoboo_typedef_cpp.inl">
 			</File>
 		</Filter>
 		<Filter
