- completed the bootstrapping fixes - completed the template fixes - completed the type declaration fixes - added in some special compiler switches so we could use a custom hash function to convert between random pointer and integer types and the pre-defined __gxx_cxx::hash<size_t> - the program is now compiling on gcc. I also fixed any warning mesages that worried me.

--- a/game/game.cbp
+++ b/game/game.cbp
@@ -334,6 +334,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-fpermissive" />
 			<Add directory="." />
 			<Add directory="../enet/include" />
 		</Compiler>
