lots of minor changes - changed the default way of passing bundles to functions from pointers the references - removed a bunch of useless "struct" keywords in various headers - tried to remove the default use of double-precision floating point numbers from calculations on floats to improve speed - changed a bunch of logging messages so that they can use the __FUNCTION__ macro to specify their location - changed the naming and the organization of various compiler switches in egoboo_config.h - removed some useless (and preformance harming) debugging code from the

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -153,6 +153,13 @@
 			Filter="">
 			<File
 				RelativePath=".\bbox.cpp">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						GeneratePreprocessedFile="0"
+						KeepComments="FALSE"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\bsp.cpp">
