--- a/game/game_vs10.vcxproj.filters
+++ b/game/game_vs10.vcxproj.filters
@@ -102,6 +102,9 @@
     <Filter Include="mmgr">
       <UniqueIdentifier>{8e333c63-136d-423e-b16c-4c0840f5c9db}</UniqueIdentifier>
     </Filter>
+    <Filter Include="file formats\randomtreasure.txt">
+      <UniqueIdentifier>{e574b7bc-f460-4311-8ecb-83c56f246c59}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bbox.cpp">
@@ -370,6 +373,9 @@
     </ClCompile>
     <ClCompile Include="Fluid_Studios_Memory_Manager\mmgr.cpp">
       <Filter>mmgr</Filter>
+    </ClCompile>
+    <ClCompile Include="file_formats\treasure_table_file.cpp">
+      <Filter>file formats\randomtreasure.txt</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -722,6 +728,9 @@
     </ClInclude>
     <ClInclude Include="egoboo_defs.h">
       <Filter>Core Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="file_formats\treasure_table_file.h">
+      <Filter>file formats\randomtreasure.txt</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
