--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -11,8 +11,8 @@ debugmode     = 1
 zbuffer       = 0
 dblclicktime  = 0
 [editor]
-mapsize       = 32      ; Default size for new map
-workdir       = module  ; Directory used for loading/saving data
+mapsize       = 64      	    ; Default size for new map
+workdir       = module/sewers   ; Directory used for loading/saving data
 
 
 
