- Spawn points and passages are loaded again and displayed - Passages are blue, spawn points red

--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -12,7 +12,7 @@ zbuffer       = 0
 dblclicktime  = 0
 [editor]
 mapsize       = 64      	    ; Default size for new map
-workdir       = module/sewers  ; Directory used for loading/saving data
+workdir       = module/griffin  ; Directory used for loading/saving data
 
 
 
