- Added basic functions for characters - Added random functions and names for random objects - Added loader code for md2-files (not used yet) - Added Header-Files for IDSZ-Definitons - Moved global defines to new header file 'egodefs.h' - Prepared code for checking for objects local and global - Added functions for object handling on map

--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -11,8 +11,11 @@ debugmode     = 1
 zbuffer       = 0
 dblclicktime  = 0
 [editor]
-mapsize       = 64      	    ; Default size for new map
-workdir       = module/griffin   ; Directory used for loading/saving data
+mapsize       = 64      	                ; Default size for new map
+egoboodir     = c:/egoboo                   ; Game directory (later: For browsing levels read-only)
+workdir       = c:/egoboo/editor/griffin    ; Directory used for loading/saving edited data
+
+
 
 
 
