- Added some code for 'game-mode' in Editor - Added some stubs for stand-alone gaming - Added additional tool code for file-loading

--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -14,6 +14,8 @@ dblclicktime  = 0
 mapsize       = 64      	                ; Default size for new map
 egoboodir     = c:/egoboo                   ; Game directory (later: For browsing levels read-only)
 workdir       = c:/egoboo/editor/griffin    ; Directory used for loading/saving edited data
+editdir       = c:/egoboo/editor            ; @todo: Replaces 'workdir'  
+moduledir     = griffin                     ; @todo: Use this one for 'view' and 'edit'  
 
 
 
