--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -13,7 +13,7 @@ dblclicktime  = 0
 [editor]
 mapsize       = 64      	                ; Default size for new map
 egoboodir     = c:/egoboo                   ; Game directory (later: For browsing levels read-only)
-workdir       = c:/egoboo/editor/griffin    ; Directory used for loading/saving edited data
+workdir       = c:/egoboo/editor/advent.mod ; Directory used for loading/saving edited data
 editdir       = c:/egoboo/editor            ; @todo: Replaces 'workdir'  
 moduledir     = griffin                     ; @todo: Use this one for 'view' and 'edit'  
 
